data/derived/comb/progs/unify/prog5771.ml.out
Characters 71-85:
  | h::t -> [h*i] @ 0 * mulByDigit i t;;
                        ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
